--- a/Example.ipynb
+++ b/Example.ipynb
@@ -1,78 +1,41 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 2,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import nn_generator as gen"
+    "## Remixing OSM maps using pixel RNNs\n",
+    "\n",
+    "This file shows an example of how to use nn_generator.\n",
+    "All the necessary files are contained in the nn_generation folder.\n",
+    "A simple import ```import nn_generator``` gives access to all necessary functionality.\n",
+    "\n",
+    "```nn_generator.libraries.basic.images``` contains function ```show_image```. This is just help function to show images in jupyter notebook. It is not possible to use without ```%matplotlib inline``` because GUI backend \"Tkinter\" produced errors. So \"agg\" backend is used for matplotlib."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Help on package nn_generator:\n",
-      "\n",
-      "NAME\n",
-      "    nn_generator - This file contains main functions for learning and generation using pixel RNNs.\n",
-      "\n",
-      "PACKAGE CONTENTS\n",
-      "    nn_generator\n",
-      "\n",
-      "SUBMODULES\n",
-      "    libraries\n",
-      "\n",
-      "FILE\n",
-      "    c:\\my program files\\new folder\\thesis-public\\nn_generator\\__init__.py\n",
-      "\n",
-      "\n",
-      "Help on function learn in module nn_generator.nn_generator:\n",
-      "\n",
-      "learn(training_data, training_folder='training_data', dataset_sizes={'heights': 150000, 'roads': 150000, 'rivers': 150000, 'buildings': 150000}, epochs={'heights': (10, 10, 10), 'roads': (6, 6, 6, 6), 'rivers': (6, 6, 6, 6), 'buildings': (1, 1, 1, 1)}, network_structures='nn_generator/examples/model_structures', network_folder='models')\n",
-      "    Parse the images, construct datasets and create and train neural networks for heights, roads, rivers and buildings.\n",
-      "    After executingthis function, the networks are ready to generate images.\n",
-      "    \n",
-      "    training_data: str\n",
-      "        Name of the file containing training input.\n",
-      "        Expects 4 PGM images named: heights.pgm, roads.pgm, rivers.pgm and buildings.pgm\n",
-      "    training_folder: str\n",
-      "        Folder to store all parsed data and constructed training datasets.\n",
-      "    dataset_sizes: dict[str, int]\n",
-      "        Number of training examples used to train each network.\n",
-      "        See the default value.\n",
-      "    epochs: dict[str, (int, int, int, int)]\n",
-      "        Number of epochs for each mode, for each network.\n",
-      "        In the case of heights, only 3 numbers are needed.\n",
-      "        In other cases 4, due to blurry and sharp layers.\n",
-      "        See the default value.\n",
-      "    network_structures: str\n",
-      "        Folder containing text files specifying structures for the networks.\n",
-      "    network_folder: str\n",
-      "        Folder, where networks will be saved.\n",
-      "        The path is created if it does not exist.\n",
-      "\n",
-      "Help on function generate in module nn_generator.nn_generator:\n",
-      "\n",
-      "generate(generation_data, output_folder, config_file='nn_generator/examples/generation_config.txt', random_modifier=10)\n",
-      "    Uses neural networks to generate images.\n",
-      "    generation_data: str\n",
-      "        Name of a folder conaining user input for generation of all images.\n",
-      "    output_folder: str\n",
-      "        Where should the output be stored.\n",
-      "        Creates path if it does not exist.\n",
-      "    config_file: str\n",
-      "        Name of a text file containing locations of neural networks used for the generation.\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "import nn_generator as gen\n",
+    "from nn_generator.libraries.basic.images import show_image\n",
+    "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "All public functions have documentation. Calling ```help(function)``` will display, how to use the function."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "help(gen)\n",
     "help(gen.learn)\n",
@@ -80,43 +43,46 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "PARSING IMAGES\n",
-      "===================\n",
-      "Parsing heights . . .\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-4-6a14c390b9de>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# This runs the entire algorithm\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mgen\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlearn\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"nn_generator/examples/learning_input/cz\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[0mgen\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mgenerate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"nn_generator/examples/generation_input/simple\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"results_czech\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mC:\\My Program Files\\New folder\\Thesis-Public\\nn_generator\\nn_generator.py\u001b[0m in \u001b[0;36mlearn\u001b[1;34m(training_data, training_folder, dataset_sizes, epochs, network_structures, network_folder)\u001b[0m\n\u001b[0;32m    179\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"PARSING IMAGES\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    180\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"===================\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 181\u001b[1;33m     \u001b[0mparse\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"heights\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mheights_image\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0moutput_folder\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mtraining_folder\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    182\u001b[0m     \u001b[0mparse\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"roads\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mroads_image\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0moutput_folder\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mtraining_folder\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    183\u001b[0m     \u001b[0mparse\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"rivers\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mrivers_image\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0moutput_folder\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mtraining_folder\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mC:\\My Program Files\\New folder\\Thesis-Public\\nn_generator\\nn_generator.py\u001b[0m in \u001b[0;36mparse\u001b[1;34m(mode, image, reductions, output_folder)\u001b[0m\n\u001b[0;32m     30\u001b[0m     \u001b[0mfolder\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34mf\"{output_folder}/{mode}_layers\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     31\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 32\u001b[1;33m     \u001b[0mparse_image\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mimage\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfolder\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mreductions\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mreductions\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     33\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     34\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mmode\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;34m\"heights\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mC:\\My Program Files\\New folder\\Thesis-Public\\nn_generator\\libraries\\parse.py\u001b[0m in \u001b[0;36mparse_image\u001b[1;34m(image_name, output_folder_name, reductions, blur, compute_differences)\u001b[0m\n\u001b[0;32m     40\u001b[0m     \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     41\u001b[0m         \u001b[1;32mfor\u001b[0m \u001b[0mreduction\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mreductions\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 42\u001b[1;33m             \u001b[0mparse\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mimage\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcut\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mreduction\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34mf\"{output_folder_name}/layer_{reduction}x\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32mC:\\My Program Files\\New folder\\Thesis-Public\\nn_generator\\libraries\\basic\\parsing.py\u001b[0m in \u001b[0;36mparse\u001b[1;34m(image, cut, reduction, file_name)\u001b[0m\n\u001b[0;32m     42\u001b[0m         \u001b[0mtokens\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mget_window\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mimage\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mrow\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcol\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mreduction\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcut\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mflatten\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     43\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 44\u001b[1;33m     \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mapply_along_axis\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfunc\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mindices\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     45\u001b[0m     \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msave\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfile_name\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtokens\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mallow_pickle\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<__array_function__ internals>\u001b[0m in \u001b[0;36mapply_along_axis\u001b[1;34m(*args, **kwargs)\u001b[0m\n",
-      "\u001b[1;32m~\\AppData\\Roaming\\Python\\Python37\\site-packages\\numpy\\lib\\shape_base.py\u001b[0m in \u001b[0;36mapply_along_axis\u001b[1;34m(func1d, axis, arr, *args, **kwargs)\u001b[0m\n\u001b[0;32m    400\u001b[0m     \u001b[0mbuff\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mind0\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mres\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    401\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0mind\u001b[0m \u001b[1;32min\u001b[0m \u001b[0minds\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 402\u001b[1;33m         \u001b[0mbuff\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mind\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0masanyarray\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfunc1d\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0minarr_view\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mind\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m*\u001b[0m\u001b[0margs\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    403\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    404\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[0misinstance\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mres\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmatrix\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mC:\\My Program Files\\New folder\\Thesis-Public\\nn_generator\\libraries\\basic\\parsing.py\u001b[0m in \u001b[0;36mfunc\u001b[1;34m(_index)\u001b[0m\n\u001b[0;32m     40\u001b[0m         \u001b[0mrow\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mrow_start\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mi\u001b[0m \u001b[1;33m//\u001b[0m \u001b[0mcol_range\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     41\u001b[0m         \u001b[0mcol\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcol_start\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mi\u001b[0m \u001b[1;33m%\u001b[0m \u001b[0mcol_range\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 42\u001b[1;33m         \u001b[0mtokens\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mget_window\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mimage\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mrow\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcol\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mreduction\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcut\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mflatten\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     43\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     44\u001b[0m     \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mapply_along_axis\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfunc\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mindices\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    }
-   ],
    "source": [
-    "# This runs the entire algorithm\n",
-    "gen.learn(\"nn_generator/examples/learning_input/cz\")\n",
-    "gen.generate(\"nn_generator/examples/generation_input/simple\", \"results_czech\")"
+    "### Running the algorithm\n",
+    "```learn()``` function executes entirity of the learning process. The expected input of this function is a file with input pgm images. To get such images, follow **readme** on how to download and parse data from **OpenStreetMap** and **OpenTopography**. The learning process automatically creates a folder containing all intermediate results for future usage. It parses the input images, constructs training datasets and trains pixel RNNs on them. Output of this algorithm are all necessary networks needed for generation. Be warned, that the process requiers a lot of computational and memory resources.\n",
+    "\n",
+    "```generate()``` function executes entirity of the generation process. It simmilarly expects folder of input pgm images. This process automatically saves images throughout the generation into the output folder. It also returns dictionary of generated images as numpy arrays.\n",
+    "\n",
+    "```nn_generator/examples/``` contains learning and user inputs used in this thesis. It also contains other default files for algorithm execution. The network structures and generation configuration file."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# This runs the entire learning algorithm\n",
+    "gen.learn(\"nn_generator/examples/learning_input/cz\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "images = gen.generate(\"nn_generator/examples/generation_input/simple\", \"results_czech\")\n",
+    "show_image(images[\"heights\"])\n",
+    "show_image(images[\"roads\"])\n",
+    "show_image(images[\"rivers\"])\n",
+    "show_image(images[\"buildings\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Lower level\n",
+    "The nn_generator module also provides lower level functions used in ```learn()``` function. This will allow further tinkering with the algorithm. For example, only heights networks are retrained from sahara terrain in the following cells. These functions also allow to save intermidiate results in different files for further experimation."
    ]
   },
   {
@@ -136,13 +102,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Retrain heights network for sahara\n",
-    "# Lower level functions\n",
+    "# Retrain heights networks from sahara terrain\n",
+    "# Functions used in gen.learn()\n",
     "gen.parse(\"heights\", \"nn_generator/examples/learning_input/sahara/heights.pgm\")\n",
     "gen.construct_training_datasets(\"heights\")\n",
-    "gen.train_networks(\"heights\", \"nn_generator/examples/model_structures\", \"models\", epochs=(10,10,10))\n",
+    "gen.train_networks(\"heights\", \"nn_generator/examples/model_structures\", \"models\", epochs=(10,10,10))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "images = gen.generate(\"nn_generator/examples/generation_input/complex\", \"results_sahara\", random_modifier=10)\n",
     "\n",
-    "gen.generate(\"nn_generator/examples/generation_input/complex\", \"results_sahara\")"
+    "show_image(images[\"heights\"])\n",
+    "show_image(images[\"roads\"])\n",
+    "show_image(images[\"rivers\"])\n",
+    "show_image(images[\"buildings\"])"
    ]
   }
  ],
