--- a/Example.ipynb
+++ b/Example.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## Remixing OSM maps using pixel RNNs\n",
     "\n",
@@ -11,40 +10,40 @@
     "A simple import ```import nn_generator``` gives access to all necessary functionality.\n",
     "\n",
     "```nn_generator.libraries.basic.images``` contains function ```show_image```. This is just help function to show images in jupyter notebook. It is not possible to use without ```%matplotlib inline``` because GUI backend \"Tkinter\" produced errors. So \"agg\" backend is used for matplotlib."
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "import nn_generator as gen\n",
-    "from nn_generator.libraries.basic.images import show_image\n",
+    "import nn_generator as gen\r\n",
+    "from nn_generator.libraries.basic.images import show_image\r\n",
     "%matplotlib inline"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "All public functions have documentation. Calling ```help(function)``` will display, how to use the function."
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "help(gen)\n",
-    "help(gen.learn)\n",
+    "help(gen)\r\n",
+    "help(gen.learn)\r\n",
     "help(gen.generate)"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "### Running the algorithm\n",
     "```learn()``` function executes entirity of the learning process. The expected input of this function is a file with input pgm images. To get such images, follow **readme** on how to download and parse data from **OpenStreetMap** and **OpenTopography**. The learning process automatically creates a folder containing all intermediate results for future usage. It parses the input images, constructs training datasets and trains pixel RNNs on them. Output of this algorithm are all necessary networks needed for generation. Be warned, that the process requiers a lot of computational and memory resources.\n",
@@ -52,76 +51,96 @@
     "```generate()``` function executes entirity of the generation process. It simmilarly expects folder of input pgm images. This process automatically saves images throughout the generation into the output folder. It also returns dictionary of generated images as numpy arrays.\n",
     "\n",
     "```nn_generator/examples/``` contains learning and user inputs used in this thesis. It also contains other default files for algorithm execution. The network structures and generation configuration file."
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "# This runs the entire learning algorithm\n",
-    "gen.learn(\"nn_generator/examples/learning_input/cz\")"
-   ]
+    "# This runs the entire learning algorithm\r\n",
+    "gen.learn(training_data=\"nn_generator/examples/learning_input/cz\")"
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "images = gen.generate(\"nn_generator/examples/generation_input/simple\", \"results_czech\")\n",
-    "show_image(images[\"heights\"])\n",
-    "show_image(images[\"roads\"])\n",
-    "show_image(images[\"rivers\"])\n",
+    "images = gen.generate(\r\n",
+    "    generation_data=\"nn_generator/examples/generation_input/simple\",\r\n",
+    "    output_folder=\"results_czech\")\r\n",
+    "    \r\n",
+    "show_image(images[\"heights\"])\r\n",
+    "show_image(images[\"roads\"])\r\n",
+    "show_image(images[\"rivers\"])\r\n",
     "show_image(images[\"buildings\"])"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "### Lower level\n",
-    "The nn_generator module also provides lower level functions used in ```learn()``` function. This will allow further tinkering with the algorithm. For example, only heights networks are retrained from sahara terrain in the following cells. These functions also allow to save intermidiate results in different files for further experimation."
-   ]
+    "The nn_generator module also provides lower level functions used in ```learn()``` function. These functions also allow to save intermidiate results into different files for further experimation. For example, only heights networks are retrained from sahara terrain in the following cells. Intermidiate results and output models are saved into separate file: intermidiate into ```sahara_heights``` and models into ```models_sahara```."
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "help(gen.parse)\n",
-    "help(gen.construct_training_datasets)\n",
+    "help(gen.parse)\r\n",
+    "help(gen.construct_training_datasets)\r\n",
     "help(gen.train_networks)"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "# Retrain heights networks from sahara terrain\n",
-    "# Functions used in gen.learn()\n",
-    "gen.parse(\"heights\", \"nn_generator/examples/learning_input/sahara/heights.pgm\")\n",
-    "gen.construct_training_datasets(\"heights\")\n",
-    "gen.train_networks(\"heights\", \"nn_generator/examples/model_structures\", \"models\", epochs=(10,10,10))"
-   ]
+    "# Retrain heights networks from sahara terrain\r\n",
+    "# Functions used in gen.learn()\r\n",
+    "gen.parse(\r\n",
+    "    mode=\"heights\",\r\n",
+    "    image=\"nn_generator/examples/learning_input/sahara/heights.pgm\",\r\n",
+    "    output_folder=\"sahara_heights\")\r\n",
+    "\r\n",
+    "gen.construct_training_datasets(\r\n",
+    "    mode=\"heights\",\r\n",
+    "    folder=\"sahara_heights\")\r\n",
+    "\r\n",
+    "gen.train_networks(\r\n",
+    "    mode=\"heights\",\r\n",
+    "    data_folder=\"sahara_heights\",\r\n",
+    "    structures_folder=\"nn_generator/examples/model_structures\",\r\n",
+    "    output_folder=\"models_sahara\",\r\n",
+    "    epochs=(10,10,10))"
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "images = gen.generate(\"nn_generator/examples/generation_input/complex\", \"results_sahara\", random_modifier=10)\n",
-    "\n",
-    "show_image(images[\"heights\"])\n",
-    "show_image(images[\"roads\"])\n",
-    "show_image(images[\"rivers\"])\n",
+    "images = gen.generate(\r\n",
+    "    generation_data=\"nn_generator/examples/generation_input/N\",\r\n",
+    "    output_folder=\"results_sahara\",\r\n",
+    "    config_file=\"nn_generator/examples/sahara_config.txt\",\r\n",
+    "    random_modifier=10)\r\n",
+    "\r\n",
+    "show_image(images[\"heights\"])\r\n",
+    "show_image(images[\"roads\"])\r\n",
+    "show_image(images[\"rivers\"])\r\n",
     "show_image(images[\"buildings\"])"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   }
  ],
  "metadata": {
