--- a/Example.ipynb
+++ b/Example.ipynb
@@ -9,7 +9,7 @@
     "All the necessary files are contained in the nn_generation folder.\n",
     "A simple import ```import nn_generator``` gives access to all necessary functionality.\n",
     "\n",
-    "```nn_generator.libraries.basic.images``` contains function ```show_image```. This is just help function to show images in jupyter notebook. It is not possible to use without ```%matplotlib inline``` because GUI backend \"Tkinter\" produced errors. So \"agg\" backend is used for matplotlib."
+    "```nn_generator.libraries.basic.images``` contains function ```show_image```. This is just a help function to show images in jupyter notebook. It is not possible to use without ```%matplotlib inline``` because GUI backend \"Tkinter\" produced errors. So \"agg\" backend is used for matplotlib."
    ],
    "metadata": {}
   },
@@ -69,7 +69,7 @@
    "execution_count": null,
    "source": [
     "images = gen.generate(\r\n",
-    "    generation_data=\"nn_generator/examples/generation_input/simple\",\r\n",
+    "    generation_data=\"nn_generator/examples/generation_input/NE\",\r\n",
     "    output_folder=\"results_czech\")\r\n",
     "    \r\n",
     "show_image(images[\"heights\"])\r\n",
@@ -103,22 +103,22 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "# Retrain heights networks from sahara terrain\r\n",
-    "# Functions used in gen.learn()\r\n",
-    "gen.parse(\r\n",
-    "    mode=\"heights\",\r\n",
-    "    image=\"nn_generator/examples/learning_input/sahara/heights.pgm\",\r\n",
-    "    output_folder=\"sahara_heights\")\r\n",
-    "\r\n",
-    "gen.construct_training_datasets(\r\n",
-    "    mode=\"heights\",\r\n",
-    "    folder=\"sahara_heights\")\r\n",
-    "\r\n",
-    "gen.train_networks(\r\n",
-    "    mode=\"heights\",\r\n",
-    "    data_folder=\"sahara_heights\",\r\n",
-    "    structures_folder=\"nn_generator/examples/model_structures\",\r\n",
-    "    output_folder=\"models_sahara\",\r\n",
+    "# Retrain heights networks from sahara terrain\n",
+    "# Functions used in gen.learn()\n",
+    "gen.parse(\n",
+    "    mode=\"heights\",\n",
+    "    image=\"nn_generator/examples/learning_input/sahara/heights.pgm\",\n",
+    "    output_folder=\"sahara_heights\")\n",
+    "\n",
+    "gen.construct_training_datasets(\n",
+    "    mode=\"heights\",\n",
+    "    folder=\"sahara_heights\")\n",
+    "\n",
+    "gen.train_networks(\n",
+    "    mode=\"heights\",\n",
+    "    data_folder=\"sahara_heights\",\n",
+    "    structures_folder=\"nn_generator/examples/model_structures\",\n",
+    "    output_folder=\"models_sahara\",\n",
     "    epochs=(10,10,10))"
    ],
    "outputs": [],
@@ -128,17 +128,24 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "images = gen.generate(\r\n",
-    "    generation_data=\"nn_generator/examples/generation_input/N\",\r\n",
-    "    output_folder=\"results_sahara\",\r\n",
-    "    config_file=\"nn_generator/examples/sahara_config.txt\",\r\n",
-    "    random_modifier=10)\r\n",
-    "\r\n",
-    "show_image(images[\"heights\"])\r\n",
-    "show_image(images[\"roads\"])\r\n",
-    "show_image(images[\"rivers\"])\r\n",
+    "images = gen.generate(\n",
+    "    generation_data=\"nn_generator/examples/generation_input/N\",\n",
+    "    output_folder=\"results_sahara\",\n",
+    "    config_file=\"nn_generator/examples/sahara_config.txt\",\n",
+    "    random_modifier=10)\n",
+    "\n",
+    "show_image(images[\"heights\"])\n",
+    "show_image(images[\"roads\"])\n",
+    "show_image(images[\"rivers\"])\n",
     "show_image(images[\"buildings\"])"
    ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [],
    "outputs": [],
    "metadata": {}
   }
