--- a/Example.ipynb
+++ b/Example.ipynb
@@ -3,12 +3,14 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## Remixing OSM maps using pixel RNNs\n",
-    "\n",
-    "This file shows an example of how to use nn_generator.\n",
-    "All the necessary files are contained in the nn_generation folder.\n",
-    "A simple import ```import nn_generator``` gives access to all necessary functionality.\n",
-    "\n",
+    "## Remixing OSM maps using pixel RNNs\r\n",
+    "\r\n",
+    "This file shows an example of how to use the nn_generator.\r\n",
+    "All the necessary files are contained in the nn_generation folder.\r\n",
+    "A simple import ```import nn_generator``` gives an access to all the necessary functionality.\r\n",
+    "Click the green `>` symbol next to the cell to run it. Running multiple cells will queue them to run one after another.\r\n",
+    "Under **Cells** you can find an option **Run all cells**.\r\n",
+    "\r\n",
     "```nn_generator.libraries.basic.images``` contains function ```show_image```. This is just a help function to show images in jupyter notebook. It is not possible to use without ```%matplotlib inline``` because GUI backend \"Tkinter\" produced errors. So \"agg\" backend is used for matplotlib."
    ],
    "metadata": {}
@@ -103,22 +105,36 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "# Retrain heights networks from sahara terrain\n",
-    "# Functions used in gen.learn()\n",
-    "gen.parse(\n",
-    "    mode=\"heights\",\n",
-    "    image=\"nn_generator/examples/learning_input/sahara/heights.pgm\",\n",
-    "    output_folder=\"sahara_heights\")\n",
-    "\n",
-    "gen.construct_training_datasets(\n",
-    "    mode=\"heights\",\n",
-    "    folder=\"sahara_heights\")\n",
-    "\n",
-    "gen.train_networks(\n",
-    "    mode=\"heights\",\n",
-    "    data_folder=\"sahara_heights\",\n",
-    "    structures_folder=\"nn_generator/examples/model_structures\",\n",
-    "    output_folder=\"models_sahara\",\n",
+    "gen.parse(\r\n",
+    "    mode=\"heights\",\r\n",
+    "    image=\"nn_generator/examples/learning_input/sahara/heights.pgm\",\r\n",
+    "    output_folder=\"sahara_heights\")\r\n"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "\r\n",
+    "gen.construct_training_datasets(\r\n",
+    "    mode=\"heights\",\r\n",
+    "    folder=\"sahara_heights\")\r\n"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "\r\n",
+    "gen.train_networks(\r\n",
+    "    mode=\"heights\",\r\n",
+    "    data_folder=\"sahara_heights\",\r\n",
+    "    structures_folder=\"nn_generator/examples/model_structures\",\r\n",
+    "    output_folder=\"models_sahara\",\r\n",
     "    epochs=(10,10,10))"
    ],
    "outputs": [],
@@ -128,24 +144,41 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "images = gen.generate(\n",
-    "    generation_data=\"nn_generator/examples/generation_input/N\",\n",
-    "    output_folder=\"results_sahara\",\n",
-    "    config_file=\"nn_generator/examples/sahara_config.txt\",\n",
-    "    random_modifier=10)\n",
-    "\n",
-    "show_image(images[\"heights\"])\n",
-    "show_image(images[\"roads\"])\n",
-    "show_image(images[\"rivers\"])\n",
+    "images = gen.generate(\r\n",
+    "    generation_data=\"nn_generator/examples/generation_input/N\",\r\n",
+    "    output_folder=\"results_sahara\",\r\n",
+    "    config_file=\"nn_generator/examples/sahara_config.txt\",\r\n",
+    "    random_modifier=10)\r\n",
+    "\r\n",
+    "show_image(images[\"heights\"])\r\n",
+    "show_image(images[\"roads\"])\r\n",
+    "show_image(images[\"rivers\"])\r\n",
     "show_image(images[\"buildings\"])"
    ],
    "outputs": [],
    "metadata": {}
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "```nn_generator/examples/models``` contains pretrained Czech models used for generation of results in the thesis. Similarly ```sahara_models``` and ```himalayas_models``` in the examples contain height networks used for generation. Following cells show generation using these networks by specifying generation configuration. To use sahara, himalayas or any different networks, use different config file or create your own as seen in the ```examples``` folder. (Results may differ due to the randomness.)"
+   ],
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "source": [],
+   "source": [
+    "images = gen.generate(\r\n",
+    "    generation_data=\"nn_generator/examples/generation_input/N\",\r\n",
+    "    output_folder=\"results_pretrained\",\r\n",
+    "    config_file=\"nn_generator/examples/pretrained_config.txt\")\r\n",
+    "\r\n",
+    "show_image(images[\"heights\"])\r\n",
+    "show_image(images[\"roads\"])\r\n",
+    "show_image(images[\"rivers\"])\r\n",
+    "show_image(images[\"buildings\"])"
+   ],
    "outputs": [],
    "metadata": {}
   }
@@ -155,9 +188,8 @@
    "hash": "57baa5815c940fdaff4d14510622de9616cae602444507ba5d0b6727c008cbd6"
   },
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "name": "python3",
+   "display_name": "Python 3.7.8 64-bit"
   },
   "language_info": {
    "codemirror_mode": {
